corrected version of translation

--- a/index.html
+++ b/index.html
@@ -161,3 +161,9 @@
         document.getElementById('link-pt').addEventListener('click', () => {
             currentLanguage = 'pt';
             loadLanguage(currentLanguage);
+        });
+
+        loadLanguage(currentLanguage); // Initial language load
+    </script>
+</body>
+</html>
