--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <a href="index.html" id="home-link">Home</a>
         <a href="privacy.html" id="privacy-link">Privacy Policy</a>
         <div class="language-links">
-            <a href="#" id="link-en">EN</a> | <a href="#" id="link-pt">PT</a>
+            <a href="#" id="link-pt">PT</a> | <a href="#" id="link-en">EN</a>
         </div>
     </nav>
     <main>
@@ -123,25 +123,25 @@
                 "header-title": "SEF Boletins de Alojamento",
                 "page-title": "SEF Boletins de Alojamento",
                 "main-title": "Bem-vindo ao SEF Boletins de Alojamento",
-                "main-description": "Este Google Add-On ajuda a automatizar o envio de Boletins de Alojamento para o SEF usando as suas Fichas do Google.",
+                "main-description": "Este Google Add-On ajuda a automatizar o envio de Boletins de Alojamento para o SEF através das suas Fichas do Google.",
                 "how-it-works": "Como Funciona",
                 "how-it-works-description": "Para começar, siga as instruções abaixo:",
-                "step-1": "Baixe um <strong><u>modelo de Google Forms</u></strong> para inserir os dados de acomodação. Você pode acessar e baixar o modelo <a href='https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr' target='_blank'>aqui</a>.",
-                "step-2": "Depois de fazer uma cópia, você será o proprietário do formulário. Você pode então compartilhar o link do formulário com seus clientes para coletar as informações.",
+                "step-1": "Descarregue um <strong><u>modelo de Google Forms</u></strong> para inserir os dados de alojamento. Pode aceder e descarregar o modelo <a href='https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr' target='_blank'>aqui</a>.",
+                "step-2": "Após fazer uma cópia, será o proprietário do formulário. Pode então partilhar o link do formulário com os seus clientes para recolher as suas informações.",
                 "step-3": "Assim que começar a receber respostas, navegue até as Fichas do Google e instale o Add-on",
-                "step-4": "Clique em <strong>SEF Definições -> Configurações</strong> e preencha suas informações pessoais",
+                "step-4": "Clique em <strong>SEF Definições -> Configurações</strong> e preencha as suas informações pessoais",
                 "step-5": "<strong>Importante:</strong> Não modifique a estrutura do formulário, pois isso pode afetar a funcionalidade do add-on.",
-                "step-6": "<strong>Aviso:</strong> Ao se registrar no site SIBA, se não tiver escolhido o método de envio <strong>Webservice</strong>, você precisará entrar em contato com eles e solicitar a alteração. Você pode encontrar os contatos <a href='https://siba.ssi.gov.pt/contactos/' target='_blank'>aqui</a>",
-                "why-use": "Por que usar este Add-On?",
-                "reason-1": "<strong>Eficiência</strong>: Automatiza o processo tedioso de envio de relatórios de acomodação para o SEF, economizando tempo e reduzindo erros humanos.",
-                "reason-2": "<strong>Seguro</strong>: Seus dados são processados diretamente a partir da sua Ficha do Google, e nenhuma informação privada é armazenada ou compartilhada. O Add-on acessa apenas seu e-mail para notificá-lo se ocorrer um erro.",
-                "reason-3": "<strong>Simples de usar</strong>: Integre facilmente o Add-on no seu documento do Google Sheets com apenas alguns cliques.",
+                "step-6": "<strong>Aviso:</strong> Ao fazer o registo no site SIBA, se não tiver escolhido o método de envio <strong>Webservice</strong>, terá de contactar-lhes e pedir para alterar. Pode encontrar os contactos <a href='https://siba.ssi.gov.pt/contactos/' target='_blank'>aqui</a>",
+                "why-use": "Porque Usar Este Add-On?",
+                "reason-1": "<strong>Eficiência</strong>: Automatiza o processo demorado de envio dos relatórios de alojamento para o SEF, poupando-lhe tempo e reduzindo erros humanos.",
+                "reason-2": "<strong>Seguro</strong>: Os seus dados são processados diretamente a partir da sua Ficha do Google, e nenhuma informação privada é armazenada ou partilhada. O Add-on apenas acede ao seu e-mail para notificá-lo se ocorrer um erro.",
+                "reason-3": "<strong>Fácil de Usar</strong>: Integre facilmente o Add-on no seu documento do Google Sheets com apenas alguns cliques.",
                 "home-link": "Página Inicial",
                 "privacy-link": "Política de Privacidade",
             }
         };
 
-        let currentLanguage = 'en'; // Default language is English
+        let currentLanguage = 'pt'; // Default language is English
 
         function loadLanguage(language) {
             const lang = translations[language];
