make language choice persistence

--- a/index.html
+++ b/index.html
@@ -49,13 +49,6 @@
             text-align: center;
             padding: 1rem 0;
         }
-        .instructions {
-            margin-top: 1rem;
-            padding: 1rem;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background: #f9f9f9;
-        }
     </style>
 </head>
 <body>
@@ -70,31 +63,12 @@
         </div>
     </nav>
     <main>
-        <h2 id="main-title">Welcome to SEF Boletins de Alojamento</h2>
-        <p id="main-description">This Google Add-On helps you automate the submission of Boletins de Alojamento to SEF using your Google Sheets.</p>
-
-        <h3 id="how-it-works">How It Works</h3>
-        <p id="how-it-works-description">To get started, follow the instructions below:</p>
-        <div class="instructions" id="instructions">
-            <ol>
-                <li id="step-1">Download a <strong><u>Google Forms template</u></strong> to input your accommodation data. You can access and download the template from <a href="https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr" target="_blank">here</a>.</li>
-                <li id="step-2">After making a copy, you will become the owner of the form. You can then share the form link with your clients to collect their information.</li>
-                <li id="step-3">Once you start getting responses, navigate to the google sheets Answers and install the Add-on</li>
-                <li id="step-4">Click on <strong>SEF Definições -> Configurações</strong> and fill in your personal information</li>
-                <li id="step-5"><strong>Important:</strong> Do not modify the structure of the form as it may affect the functionality of the add-on.</li>
-                <li id="step-6"><strong>Note:</strong> Upon registration on SIBA website, if you did not choose the send method <strong>Webservice</strong>, you need to contact them and request to change it. You can find their contacts <a href="https://siba.ssi.gov.pt/contactos/" target="_blank">here</a></li>
-            </ol>
-        </div>
-
-        <h3 id="why-use">Why Use This Add-On?</h3>
-        <ul>
-            <li id="reason-1"><strong>Efficient</strong>: Automates the tedious process of submitting accommodation reports to SEF, saving you time and reducing human error.</li>
-            <li id="reason-2"><strong>Secure</strong>: Your data is processed directly from your Google Sheet, and no private information is stored or shared. The Add-on only accesses your email to notify you if an error occurs.</li>
-            <li id="reason-3"><strong>Simple to Use</strong>: Easily integrate the Add-on into your Google Sheets document with just a few clicks.</li>
-        </ul>
+        <h2 id="introduction">Introduction</h2>
+        <p id="intro-description">At SEF Boletins de Alojamento, we value your privacy. This Privacy Policy outlines how we handle and protect the data that you provide through our Google Sheets Add-on.</p>
+        <p id="other-info">More information about the service can be found here.</p>
     </main>
     <footer>
-        <p>&copy; 2024 All rights reserved</p>
+        <p>&copy; 2024 All rights reserved.</p>
     </footer>
 
     <script>
@@ -102,46 +76,24 @@
             en: {
                 "header-title": "SEF Boletins de Alojamento",
                 "page-title": "SEF Boletins de Alojamento",
-                "main-title": "Welcome to SEF Boletins de Alojamento",
-                "main-description": "This Google Add-On helps you automate the submission of Boletins de Alojamento to SEF using your Google Sheets.",
-                "how-it-works": "How It Works",
-                "how-it-works-description": "To get started, follow the instructions below:",
-                "step-1": "Download a <strong><u>Google Forms template</u></strong> to input your accommodation data. You can access and download the template from <a href='https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr' target='_blank'>here</a>.",
-                "step-2": "After making a copy, you will become the owner of the form. You can then share the form link with your clients to collect their information.",
-                "step-3": "Once you start getting responses, navigate to the google sheets Answers and install the Add-on",
-                "step-4": "Click on <strong>SEF Definições -> Configurações</strong> and fill in your personal information",
-                "step-5": "<strong>Important:</strong> Do not modify the structure of the form as it may affect the functionality of the add-on.",
-                "step-6": "<strong>Note:</strong> Upon registration on SIBA website, if you did not choose the send method <strong>Webservice</strong>, you need to contact them and request to change it. You can find their contacts <a href='https://siba.ssi.gov.pt/contactos/' target='_blank'>here</a>",
-                "why-use": "Why Use This Add-On?",
-                "reason-1": "<strong>Efficient</strong>: Automates the tedious process of submitting accommodation reports to SEF, saving you time and reducing human error.",
-                "reason-2": "<strong>Secure</strong>: Your data is processed directly from your Google Sheet, and no private information is stored or shared. The Add-on only accesses your email to notify you if an error occurs.",
-                "reason-3": "<strong>Simple to Use</strong>: Easily integrate the Add-on into your Google Sheets document with just a few clicks.",
                 "home-link": "Home",
                 "privacy-link": "Privacy Policy",
+                "introduction": "Introduction",
+                "intro-description": "At SEF Boletins de Alojamento, we value your privacy. This Privacy Policy outlines how we handle and protect the data that you provide through our Google Sheets Add-on.",
+                "other-info": "More information about the service can be found here."
             },
             pt: {
                 "header-title": "SEF Boletins de Alojamento",
                 "page-title": "SEF Boletins de Alojamento",
-                "main-title": "Bem-vindo ao SEF Boletins de Alojamento",
-                "main-description": "Este Google Add-On ajuda a automatizar o envio de Boletins de Alojamento para o SEF através das suas Fichas do Google.",
-                "how-it-works": "Como Funciona",
-                "how-it-works-description": "Para começar, siga as instruções abaixo:",
-                "step-1": "Descarregue um <strong><u>modelo de Google Forms</u></strong> para inserir os dados de alojamento. Pode aceder e descarregar o modelo <a href='https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr' target='_blank'>aqui</a>.",
-                "step-2": "Após fazer uma cópia, será o proprietário do formulário. Pode então partilhar o link do formulário com os seus clientes para recolher as suas informações.",
-                "step-3": "Assim que começar a receber respostas, navegue até as Fichas do Google e instale o Add-on",
-                "step-4": "Clique em <strong>SEF Definições -> Configurações</strong> e preencha as suas informações pessoais",
-                "step-5": "<strong>Importante:</strong> Não modifique a estrutura do formulário, pois isso pode afetar a funcionalidade do add-on.",
-                "step-6": "<strong>Aviso:</strong> Ao fazer o registo no site SIBA, se não tiver escolhido o método de envio <strong>Webservice</strong>, terá de contactar-lhes e pedir para alterar. Pode encontrar os contactos <a href='https://siba.ssi.gov.pt/contactos/' target='_blank'>aqui</a>",
-                "why-use": "Porque Usar Este Add-On?",
-                "reason-1": "<strong>Eficiência</strong>: Automatiza o processo demorado de envio dos relatórios de alojamento para o SEF, poupando-lhe tempo e reduzindo erros humanos.",
-                "reason-2": "<strong>Seguro</strong>: Os seus dados são processados diretamente a partir da sua Ficha do Google, e nenhuma informação privada é armazenada ou partilhada. O Add-on apenas acede ao seu e-mail para notificá-lo se ocorrer um erro.",
-                "reason-3": "<strong>Fácil de Usar</strong>: Integre facilmente o Add-on no seu documento do Google Sheets com apenas alguns cliques.",
                 "home-link": "Página Inicial",
                 "privacy-link": "Política de Privacidade",
+                "introduction": "Introdução",
+                "intro-description": "No SEF Boletins de Alojamento, valorizamos a sua privacidade. Esta Política de Privacidade descreve como tratamos e protegemos os dados que nos fornece através do nosso Add-on para Google Sheets.",
+                "other-info": "Mais informações sobre o serviço podem ser encontradas aqui."
             }
         };
 
-        let currentLanguage = 'pt'; // Default language is English
+        let currentLanguage = localStorage.getItem('language') || 'pt'; // Default language is English
 
         function loadLanguage(language) {
             const lang = translations[language];
@@ -155,11 +107,13 @@
 
         document.getElementById('link-en').addEventListener('click', () => {
             currentLanguage = 'en';
+            localStorage.setItem('language', currentLanguage);
             loadLanguage(currentLanguage);
         });
 
         document.getElementById('link-pt').addEventListener('click', () => {
             currentLanguage = 'pt';
+            localStorage.setItem('language', currentLanguage);
             loadLanguage(currentLanguage);
         });
 
